<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>eu.europeana</groupId>
        <artifactId>europeana-parent-pom</artifactId>
        <version>2.4</version>
    </parent>

    <artifactId>api2</artifactId>
    <version>2.16.8-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Search and Record API</name>
    <url>http://www.europeana.eu</url>

    <modules>
        <module>api2-model</module>
        <module>api2-war</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:europeana/api2.git</connection>
        <developerConnection>scm:git:git@github.com:europeana/api2.git</developerConnection>
        <url>https://github.com/europeana/api2</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <corelib.version>2.16.7</corelib.version>
        <!-- metis-framework 11 and metis.schema 9-SNAPSHOT uses JDK 17.
         Moving forward we do need to upgrade to JDK 21 if we continue to use metis dependencies and want to upgrade them-->
        <metis.version>11</metis.version>
        <apicommons.version>0.3.23</apicommons.version>
        <translation.api.client.version>0.1.1</translation.api.client.version>

        <httpclient.version>4.5.13</httpclient.version>
        <jackson.version>2.16.0</jackson.version>
        <jodatime.version>2.9.2</jodatime.version>
        <servletJstl.version>1.2</servletJstl.version>
        <swagger.version>2.9.2</swagger.version>
        <log4j2.version>2.19.0</log4j2.version>
        <junit.version>4.12</junit.version>
        <mockito.version>3.2.0</mockito.version>

        <!-- Note that SpringBoot and SpringCore are also dependencies in Corelib
             so versions have to match -->
        <!-- Also note that if we upgrade SpringBoot to v1.4.x or later we break the current info endpoint functionality -->
        <springBoot.version>1.3.8.RELEASE</springBoot.version>
        <springCore.version>5.3.16</springCore.version>

        <springWebService.version>2.4.7.RELEASE</springWebService.version>
    </properties>
    <build>
        <plugins>
            <!-- This will be active when running the verify or install goal
                 To skip (e.g. during debugging) use 'mvn clean package')-->
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>8.4.3</version>
                <configuration>
                    <assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
                    <failBuildOnCVSS>9</failBuildOnCVSS>
                    <suppressionFiles>
                        <suppressionFile>owasp-suppress.xml</suppressionFile>
                    </suppressionFiles>
                    <!-- see EA-3505 why we host the known exploited vulnerabilties file ourselves -->
                    <knownExploitedUrl>http://artifactory.eanadev.org/artifactory/ext-release-local/gov/cisa/www/known_exploited_vulnerabilities.json</knownExploitedUrl>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
